기타사항 수정

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "페이즘",
+  "name": "페이즘 공식홈페이지",
   "icons": [
     {
       "src": "favicon.ico",
